--- a/src/Header.css
+++ b/src/Header.css
@@ -3,7 +3,7 @@
     height: 1.5em;
     line-height: 1.5em;
     position: sticky;
-    top: 0;
+    top: 4em;
     z-index: 1000;
     background-color: rgb(238, 238, 221);
     font-weight: bold;
