--- a/src/base-components/Controls.css
+++ b/src/base-components/Controls.css
@@ -3,6 +3,10 @@
     display: flex;
     background-color: #1b4965;
     justify-content: flex-end;
+    width: 100vw;
+    position: fixed;
+    left: 0;
+    z-index: 1000;
 }
 
 .controls > button {
